--- a/CoreCRUDProject/Views/_ViewImports.cshtml
+++ b/CoreCRUDProject/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using CoreCRUDProject
 @using CoreCRUDProject.Models
+@using CoreCRUDProject.Models.Entities.Concrete
+@using CoreCRUDProject.Models.DTOs 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
